feat: Tasks delete,checked

--- a/TodoApp/Views/Shared/_Layout.cshtml
+++ b/TodoApp/Views/Shared/_Layout.cshtml
@@ -27,9 +27,10 @@
                         </ul>
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
-                                <a class="btn btn-outline-danger" asp-controller="Account" asp-action="">
-                                    Logout
-                                </a>
+                                <form asp-controller="Account" asp-action="Logout" method="post">
+                                    <button type="submit" class="btn btn-outline-danger">Logout</button>
+                                </form>
+
                             </li>
                         </ul>
                     }
